--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "matekasse-website",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -15,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gql-query-builder": "^3.8.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "luxon": "^3.5.0",
     "next": "15.2.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.10",
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.2.2",
     "@tailwindcss/postcss": "^4",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20",
@@ -38,8 +41,12 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.26.1"
   }
 }
