--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,6 @@ name = "matekasse2"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = ".vercel/output/static"
+
+[vars]
+NODE_VERSION = "v23.9.0"
