--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
