--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "lucide-react": "^0.477.0",
     "luxon": "^3.5.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "sonner": "^2.0.3",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod_utilz": "^0.8.3"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.13.10",
