migrate to @opennextjs/cloudflare

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,11 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "baseUrl": "src/",
   "include": [
     "next-env.d.ts",
     "**/*.ts",
