--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "npx @cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "deploy": "npm run pages:build && wrangler pages deploy"
+    "pages:build": "npx @opennextjs/cloudflare build",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy",
+    "upload": "opennextjs-cloudflare build && opennextjs-cloudflare upload",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.6",
@@ -32,7 +34,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "luxon": "^3.5.0",
-    "next": "15.1.0",
+    "next": "^15.5.6",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
@@ -46,9 +48,9 @@
     "zod_utilz": "^0.8.3"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.10",
     "@eslint/eslintrc": "^3",
     "@next/eslint-plugin-next": "^15.2.2",
+    "@opennextjs/cloudflare": "^1.11.0",
     "@tailwindcss/postcss": "^4",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20",
