--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,7 +11,7 @@
     // see https://developers.cloudflare.com/workers/configuration/compatibility-flags/#global-fetch-strictly-public
     "global_fetch_strictly_public"
   ],
-  //"pages_build_output_dir": ".open-next/output/static",
+  "pages_build_output_dir": ".open-next/output/static",
   "assets": {
     "directory": ".open-next/assets",
     "binding": "PAGES_ASSETS"
